--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "blockdevice",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Block Device",
   "main": "lib/blockdevice",
-  "directories": {
-    "test": "test"
-  },
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
@@ -13,7 +10,9 @@
   },
   "keywords": [
     "block",
-    "device"
+    "physical",
+    "device",
+    "drive"
   ],
   "author": "Jonas Hermsmeier <jhermsmeier@gmail.com>",
   "license": "MIT"
