--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockdevice",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Block Device",
   "main": "lib/blockdevice",
   "dependencies": {},
@@ -14,7 +14,7 @@
     "device",
     "drive"
   ],
-  "author": "Jonas Hermsmeier <jhermsmeier@gmail.com>",
+  "author": "Jonas Hermsmeier <jhermsmeier@gmail.com> (https://jhermsmeier.de)",
   "license": "MIT",
   "directories": {
     "example": "example",
