--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Block Device",
   "main": "lib/blockdevice",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "~2.3.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "block",
