--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "physical"
   ],
   "main": "lib/blockdevice.js",
-  "dependencies": {},
+  "dependencies": {
+    "debug": "~2.2.0"
+  },
   "devDependencies": {
     "mocha": "~2.5.3"
   },
