--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   ],
   "main": "lib/blockdevice.js",
   "dependencies": {
-    "debug": "~2.3.2"
+    "debug": "^4.1.0"
   },
   "devDependencies": {
-    "mocha": "~3.1.2"
+    "mocha": "^5.2.0"
   },
   "homepage": "https://github.com/jhermsmeier/node-blockdevice",
   "repository": {
