--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
-sudo: false
 node_js:
-  - stable
-  - "5"
+  - "10"
+  - "8"
+  - "6"
   - "4"
-branches:
-  only:
-    - master
-script: npm test
+script:
+  - npm test
