--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "debug": "^4.1.0"
+    "@ronomon/direct-io": "^2.4.3",
+    "debug": "^4.1.0",
+    "readable-stream": "^3.0.6"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
