--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "readable-stream": "^3.4.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "mountutils": "^1.3.19"
   },
   "homepage": "https://github.com/jhermsmeier/node-blockdevice",
   "repository": {
